--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.3.6"
   },
   "devDependencies": {
+    "@nuxtjs/style-resources": "^1.0.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2"
   }
